Grease Pencil Reproject Strokes is incorrectly placing the strokes on the Back Faces when canvas is intersecting the object #88998

Closed
opened 2021-06-09 12:09:11 +02:00 by Sahin Ersoz · 12 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 457.51

Blender Version
Broken: version: 2.93.0, branch: master, commit date: 2021-06-02 11:21, hash: 84da05a8b8
Worked: (newest version of Blender that worked as expected) Blender 2.92

Short description of error
Grease Pencil Reproject Strokes is incorrectly placing the strokes on the Back Faces when canvas is intersecting the object.

Exact steps for others to reproduce the error

In Blender with the default cube present add a grease pencil object. Leave it in the world center.
Create a layer and a material.
press 1 to go to Front View.
Draw something (while the Canvas is also at the world center and intersecting the Cube).
Switch to Grease Pencil Edit and select all strokes/points.
Under menu item: Grease Pencil / Cleanup / Reproject Strokes.
For Projection Type choose "Surface" (optionally turn on "Keep Original").

This will result in strokes being projected on the back faces of the cube, instead of the front faces.

GP_Reproject_Strokes_B293_text.jpg

GP_Reproject_Strokes_B292_text.jpg

[Based on the default startup or an attached .blend file (as simple as possible)]
ReprojectStrokes_Bug.blend

**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 457.51 **Blender Version** Broken: version: 2.93.0, branch: master, commit date: 2021-06-02 11:21, hash: `84da05a8b8` Worked: (newest version of Blender that worked as expected) Blender 2.92 **Short description of error** Grease Pencil **Reproject Strokes** is incorrectly placing the strokes on the Back Faces when canvas is intersecting the object. **Exact steps for others to reproduce the error** In Blender with the default cube present add a grease pencil object. Leave it in the world center. Create a layer and a material. press 1 to go to Front View. Draw something (while the Canvas is also at the world center and intersecting the Cube). Switch to Grease Pencil Edit and select all strokes/points. Under menu item: Grease Pencil / Cleanup / Reproject Strokes. For Projection Type choose "Surface" (optionally turn on "Keep Original"). This will result in strokes being projected on the back faces of the cube, instead of the front faces. ![GP_Reproject_Strokes_B293_text.jpg](https://archive.blender.org/developer/F10164046/GP_Reproject_Strokes_B293_text.jpg) ![GP_Reproject_Strokes_B292_text.jpg](https://archive.blender.org/developer/F10164045/GP_Reproject_Strokes_B292_text.jpg) [Based on the default startup or an attached .blend file (as simple as possible)] [ReprojectStrokes_Bug.blend](https://archive.blender.org/developer/F10164040/ReprojectStrokes_Bug.blend)
Author

Added subscriber: @sse

Added subscriber: @sse

Added subscribers: @antoniov, @iss

Added subscribers: @antoniov, @iss

@antoniov is this bug? Manual doesn't specify this and I am not sure from reading the code.

@antoniov is this bug? Manual doesn't specify this and I am not sure from reading the code.

Added subscriber: @mano-wii

Added subscriber: @mano-wii

GPencil code is just using standard Blender function and I don't know too mucho abut them

Maybe @mano-wii, that fixed a bug in this area lately and he knows better than me how reproject works and can help here.

GPencil code is just using standard Blender function and I don't know too mucho abut them Maybe @mano-wii, that fixed a bug in this area lately and he knows better than me how reproject works and can help here.

This issue was referenced by 0cd6c1d502

This issue was referenced by 0cd6c1d502bcec9e41d9d8d9d67f79179ee3c71a

This issue was referenced by ea3895558d

This issue was referenced by ea3895558d7b174347d1ba1f03fdb22c90e67a79

Changed status from 'Needs Triage' to: 'Resolved'

Changed status from 'Needs Triage' to: 'Resolved'
Germano Cavalcante self-assigned this 2021-06-09 14:34:45 +02:00

Thanks @mano-wii !

Thanks @mano-wii !
Author

Thank you, Antonio and Germano!
Unfortunately the problem still persists in Blender Release Candidate 2.93.1
ReprojectStrokes_Bug2.blend
I attached the Blender scene. Please open it in both 2.92 and 2.93.1. If you Re-project the lines from the Camera's point of view you will see the difference in behavior. The strokes end up on the wrong side with 2.93.1.
Thank you, again for all your hard work!
Sahin

Thank you, Antonio and Germano! Unfortunately the problem still persists in Blender Release Candidate 2.93.1 [ReprojectStrokes_Bug2.blend](https://archive.blender.org/developer/F10168095/ReprojectStrokes_Bug2.blend) I attached the Blender scene. Please open it in both 2.92 and 2.93.1. If you Re-project the lines from the **Camera's point of view** you will see the difference in behavior. The strokes end up on the wrong side with 2.93.1. Thank you, again for all your hard work! Sahin
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Unfortunately the problem still persists in Blender Release Candidate 2.93.1

Hi, the commit was added in #88449: Blender LTS: Maintenance Task 2.93 after finding the good commit to fix: #89101

You can try again with next 2.93.4 build. Fix added in blender-v2.93-release branch a few minutes before: 0cd6c1d502

>Unfortunately the problem still persists in Blender Release Candidate 2.93.1 Hi, the commit was added in `#88449: Blender LTS: Maintenance Task 2.93` after finding the good commit to fix: #89101 You can try again with next 2.93.4 build. Fix added in `blender-v2.93-release` branch a few minutes before: 0cd6c1d502
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#88998
No description provided.