Fix T88998: GPencil not projecting to the most front surface

It was projecting from the stroke position.

The behavior has changed in {rB5400be9ffee2}.